--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.quarto
+/.quarto/
+
 # History files
 .Rhistory
 .Rapp.history
@@ -38,9 +41,6 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
-
-# pkgdown site
-docs/
 
 # translation temp files
 po/*~
